--- a/project/src/components/login-form/login-form.css
+++ b/project/src/components/login-form/login-form.css
@@ -1,12 +1,13 @@
 .error {
-  border-color: rgb(255, 0, 0);
+  border-color: red;
+  margin-bottom: 0;
 }
 .error:focus {
   outline: 0;
-  border-color: rgb(255, 0, 0);
+  border-color:  red;
 }
 
 .textError {
   color: red;
-  font-size: 0.8em;
+  font-size: 12px;
 }
